# LaCartoMante

./: .gitignore  README.md  pyproject.toml  requirements.txt
fortune_teller/: ai_utils.py  main.py  pdf_utils.py
fortune_teller/Languages/English/: adjectives.txt  golden_cards.txt  subjects.txt  vocabulary.txt
fortune_teller/Languages/Italiano/: adjectives.txt  golden_cards.txt  subjects.txt  vocabulary.txt
